--- a/playground.html
+++ b/playground.html
@@ -87,8 +87,25 @@
         const geoJsonLayer = L.geoJSON(stores).addTo(peta);
 
 
+        // function to get my location
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition);
+            } else {
+                alert("Geolocation is not supported by this browser.");
+            }
+        }        
+        // function to show position
+        function showPosition(position) {
+            const lat = position.coords.latitude;
+            const lon = position.coords.longitude;
+            const userMarker = L.marker([lat, lon]).addTo(peta);
+            peta.setView([lat, lon], 13);
+        }        
+        // Call getLocation to retrieve user's location
+        getLocation();
 
-
+        
         
 
     </script>
