mengubah judul menjadi mathew haven

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <div class="logo">Brew <span>Haven</span></div>
+            <div class="logo">Matthew <span>Haven</span></div>
             <nav>
                 <button class="mobile-menu-btn">☰</button>
                 <ul id="nav-menu">
@@ -177,7 +177,7 @@
                     <li><b>Cafe Two</b><br>Jl. Medan Merdeka Selatan, Jakarta</li>
                     <li><b>Cafe Three</b><br>Jl. Medan Merdeka Utara, Jakarta</li>
                     <li><b>Cafe Four</b><br>Jl. Medan Merdeka Timur, Jakarta</li>
-                    <li><b>Cafe Five</b><br>Jl. Medan Merdeka Barat, Jakarta</li>
+                    <li><b>Cafe Bekasi</b><br>Planet Bekasi, Jl. Raya Bekasi</li>
                 </ul>
             </div>
             <div id="map" style="height: 400px;"></div>
