--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <div class="logo">Matthew <span>Haven</span></div>
+            <div class="logo">Saidi the <span>Tailwind Guy!</span></div>
             <nav>
                 <button class="mobile-menu-btn">☰</button>
                 <ul id="nav-menu">
